--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "express": "^4.14.0",
     "mustache-express": "^1.2.5",
-    "qrcode-npm": "0.0.3"
+    "node-gcp": "^0.1.0",
+    "qrcode-npm": "0.0.3",
+    "request-promise": "^4.2.1"
   },
   "engines": {
     "node": ">= 4.0.0"
