--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.14.0",
     "mustache-express": "^1.2.5",
     "node-gcp": "^0.1.0",
+    "qrcode": "^0.8.2",
     "qrcode-npm": "0.0.3",
     "request-promise": "^4.2.1"
   },
